Sat Apr  9 08:29:15 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-qnx.h:
          Added ACE_LACKS_ISWBLANK

Fri Apr  8 21:55:21 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/OS_NS_sys_socket.cpp:

        * tests/Bug_3943_Regression_Test.cpp:

          Clean up code for non-windows builds. The test now runs on
          non-windows, although the 3943 regression isn't actually
          evaluated as the error is windows specfic.

Fri Apr  8 13:35:54 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * ace/config-linux.h:
        * include/makeinclude/platform_linux_clang.GNU:

          Support for the Clang C++ compiler (http://clang.llvm.org) on Linux.

Fri Apr  8 13:15:08 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/OS_NS_sys_socket.h:
        * ace/OS_NS_sys_socket.inl:
        * ace/OS_NS_sys_socket.cpp:

          Fix for bug 3943, the regression test added the other day should
          pass now.

Thu Apr  7 11:40:00 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy work branch.

        === start changelog ===

        Mon Mar 21 17:58:15 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * ace/Lock.h:
                * ace/Map_T.h:
                * ace/WFMO_Reactor.h:
                  Doxygen updates

        Mon Feb 28 13:32:56 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * ace/Local_Tokens.h:
                  Doxygen updates

        Tue Feb 22 13:21:35 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * ace/Reactor.h:
                * ace/WFMO_Reactor.h:
                  Doxygen updates

        Sun Feb 20 12:47:05 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * ace/OS_NS_Thread.h:
                * ace/OS_NS_Thread.inl:
                * ace/OS_NS_Thread.cpp:
                  Removed ACE_HAS_NONSCALAR_THREAD_KEY_T, we don't have a config file
                  that defines this
